force-app/main/default/objects/Managed_Public_Group__c/Managed_Public_Group__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Managed Public Group</label>
</CustomObject>