force-app/main/default/objects/Managed_Public_Group__c/fields/Collaboration_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Group_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Id of the Chatter group associated with the Managed Public Group</description>
    <label>Collaboration Group Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>