force-app/main/default/objects/Managed_Public_Group__c/fields/Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Id__c</fullName>
    <label>Public Group Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>