force-app/main/default/objects/Managed_Public_Group__c/fields/Purge_Existing_Members__c.field-meta.xml
<CustomField>
    <fullName>Purge_Existing_Members__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Purge Existing Members</label>
    <type>Checkbox</type>
</CustomField>