force-app/main/default/objects/Managed_Public_Group__c/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>NAME</columns>
    <columns>Group_Id__c</columns>
    <columns>Purge_Existing_Members__c</columns>
    <columns>Collaboration_Group_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>